Fix side menu on small screens in cover photo.

--- a/sulo-style/scss/store.scss
+++ b/sulo-style/scss/store.scss
@@ -4,53 +4,69 @@
 	}
 	.page-content {
 		padding-top: 0;
-		// @include breakpoint(medium) {
-		// 	padding-top: 2rem;
-		// }
 	}
 	.store-container {
-		background: rgba(#2E2A31, 0.3);
-		color: #F0EDE3;
+		$brown: #2E2A31;
+		$nude: #F0EDE3;
+		background: rgba($brown, 0.3);
+		color: $nude;
 		h1 {
-			color: #F0EDE3;
+			color: $nude;
 			text-shadow: 1px 1px 1px rgba($black, 0.7);
 		}
 		i {
 			color: yellow;
 			text-shadow: 1px 1px 1px rgba($black, 0.7);
 		}
-		// i {
-		// box-shadow: 0 1px 3px 1px rgba($white, 0.2);
-		// }
+		.store-main-menu {
+			width: 100%;
+			padding: 1rem 0;
+			li {
+				$border: 1px solid rgba($brown, 0.2);
+				border-top: $border;
+				&:last-child {
+					border-bottom: $border;
+				}
+				&:hover {
+					background: rgba($brown, 0.7);
+				}
+				a {
+					color: $nude;
+					font-weight: 500;
+				text-shadow: 1px 1px 1px rgba($black, 0.7);
+				}
+			}
+		}
 	}
-
-	.cover-photo-section {
-		// $pct: percentage(1/$n);
-		// width: $pct; 
+	.store-short-info-container {
+		display: flex;
 		padding: 0 1rem;
-		// margin: 0 1rem; 
-		&.grow {
-			flex: 1;
-		}
-		&.shrink {
-			flex: 0 0;
-		}
 		@include breakpoint(large) {
-			flex: 1;
+			flex-direction: column;
+			padding: 0 2rem;
+		}
+		.content-item-thumbnail-container {
+			width: 5rem;
+			margin-right: 1rem;
+			@include breakpoint(large){
+				width: 100%;
+				margin: 0;
+			}
 		}
 	}
 
 	#stream-container {
-		// min-height: 10rem;
+		min-height: 18rem;
 		height: 100%;
-		// flex: 1;
+		flex: 1;
 		padding: 0;
 		width: 100%;
 		display: flex;
 		justify-content: center;
 		padding: 1rem 0.5rem;
 		@include breakpoint(medium) {
-			padding: 2rem 0;
+			min-height: 24rem;
+			padding: 2rem 8rem;
 		}
 		@include breakpoint(large) {
 			padding: 5rem 2rem;
@@ -60,38 +76,31 @@
 		}
 		#video-container {
 			max-width: 75rem;
-			height: 100%;
-			width: 100%;
+			flex: 1;
+			// min-height: 
 		}
 	}
 	#stream-chat {
-		// height: 100%;
 		display: none;
 		background: rgba($white, 0.7);
-		// box-shadow: inset 1px 0 3px 1px rgba($black, 0.2);
 		@include breakpoint(large) {
 			display: block;
 		}
 	}
-	.cover-container {
-		// background: rgba(#3A5288, 0.2); 
-	}
 	.cover-photo {
+		&.row {
+			max-width: 100%;
+		}
 		display: flex;
 		flex-direction: column;
-		// &.row {
-		// 	max-width: 100%;
-		// }
-		height: 25rem;
-		// padding: 4rem 0;
+		min-height: 25rem;
 		@include breakpoint(medium) {
-			height: 30rem;
+			min-height: 30rem;
 		}
 		@include breakpoint(large) {
 			flex-direction: row;
-			height: 40rem;
+			min-height: 40rem;
 		}
-		// background: white;
 		background-image: url("https://img0.etsystatic.com/151/0/11651126/isbl_3360x840.22956500_1bj341c6.jpg");
 		background-size: cover;
 		background-repeat: no-repeat;
@@ -100,8 +109,7 @@
 
 	.store-nav {
 		padding: 0.7rem 0;
-		background: $body-background;//$navbar-background-color;
-		// border-bottom: 1px solid rgba($black, 0.2);
+		background: $body-background;
 		box-shadow: 0 1px 3px 1px rgba($black, 0.2);
 		ul {
 			background: transparent;
